# -data-collection-service

./: CMakeLists.txt  CMakeLists.txt.save  Dockerfile  README.md  config.json  runtest.sh
include/hdf5/: H5pubconf.h  h5do.mod  h5es.mod  h5vl.mod
lib/amd64/: HDF5Config.cmake  libhdf5.la  libhdf5.settings  libhdf5_hl.la  libhdf5_hl.so.310.0.3
lib/etc/boost_amd64/: libboost_locale.so.1.71.0
lib/hdf5/aarch64/: libhdf5.la  libhdf5.settings  libhdf5_cpp.so.310.0.3  libhdf5_fortran.so.310.2.0  libhdf5_hl.la  libhdf5_hl.so.310.0.3  libhdf5_hl_cpp.so.310.0.3  libhdf5hl_fortran.so.310.0.3  libsz.so.2.0.0  libz.so.1.3
lib/hdf5/aarch64/pkgconfig/: hdf5.pc  hdf5_cpp.pc  hdf5_fortran.pc  hdf5_hl.pc  hdf5_hl_cpp.pc  hdf5_hl_fortran.pc
lib/hdf5/amd64/: libhdf5.la  libhdf5.settings  libhdf5_cpp.la  libhdf5_cpp.so.103  libhdf5_hl.la  libhdf5_hl.so.100  libhdf5_hl_cpp.so.100  libhdf5_hl_cpp.so.100.1.9
lib/hdf5/temp_file/amd64/: libhdf5.settings  libhdf5_hl.la  libhdf5_hl_cpp.la
lib/mqtt/aarch64/: libcrypto.pc  libpaho-mqtt3a.so.1.3.13  libpaho-mqtt3as.so.1  libpaho-mqtt3cs.so.1.3.13  libpaho-mqttpp3.so.1.2.0  libssl.pc  libssl.so.3
lib/mqtt/amd64/: libpaho-mqtt3a.so.1.3.13  libpaho-mqtt3c.so.1.3.13  libpaho-mqtt3cs.so.1.3.13  libpaho-mqttpp3.so.1.2.0
lib/mqtt/amd64/cmake/PahoMqttCpp/: PahoMqttCppTargets-noconfig.cmake  PahoMqttCppTargets.cmake
lib/mqtt/amd64/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig-debug.cmake  eclipse-paho-mqtt-cConfig.cmake
lib/opencv/aarch32/: libopencv_calib3d.so.4.5  libopencv_flann.so.4.5  libopencv_highgui.so.4.5.4  libopencv_imgcodecs.so.4.5.4  libopencv_imgproc.so.4.5  libopencv_objdetect.so.4.5.4  libopencv_photo.so.4.5  libopencv_stitching.so.4.5.4  libopencv_videoio.so.4.5
lib/opencv/aarch64/: libopencv_features2d.so.4.5  libopencv_highgui.so.4.5  libopencv_imgcodecs.so.4.5  libopencv_ml.so.4.5  libopencv_stitching.so.4.5
lib/opencv/aarch64/lib/: libopencv_calib3d.so.4.5.4  libopencv_photo.so.4.5.4  libopencv_video.so.4.5.4  libopencv_videoio.so.4.5.4
lib/opencv/aarch64/lib/cmake/opencv4/: OpenCVModules-release.cmake
lib/opencv/amd64/: libopencv_calib3d.so.4.5  libopencv_features2d.so.4.5.4  libopencv_flann.so.4.5.4  libopencv_objdetect.so.4.5.4  libopencv_videoio.so.4.5.4
lib/opencv/amd64/lib/: libopencv_ml.so.4.5.4  libopencv_photo.so.4.5.4  libopencv_video.so.4.5.4
lib/x264/aarch64/: libx264.so.164
lib/x264/amd64/: libx264.so.164
src/: main.cpp  main.h  opencv_test.cpp  pub_0.cpp  rec_0.cpp
src/sensors/: Camera.cpp  Camera.h  GPS.cpp  GPS.h  IMU.cpp  IMU.h  Lidar.cpp  Lidar.h  Radar.cpp  Radar.h  mqtt.cpp  mqtt.h
